--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-router-redux": "^5.0.18",
+    "@types/uuid": "^3.4.6",
     "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -21,7 +22,8 @@
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.2.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
